--- a/css/style.css
+++ b/css/style.css
@@ -887,7 +887,7 @@ body {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     max-height: calc(100vh - 30px);
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 
 .backdrop.is-hidden .modal {
